--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="0; url=https://planetaryrestorationarchive.com/continuity/atlas">
+<meta http-equiv="refresh" content="0; url=https://therickyfoster.github.io/continuity/atlas">
 </html> 
